--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   path: ^1.8.3
   flutter_local_notifications: ^17.0.0
   timezone: ^0.9.2
+  intl: ^0.20.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
